Made code modular and added score on UI

--- a/index.html
+++ b/index.html
@@ -9,8 +9,20 @@
 </head>
 
 <body>
+  <div class="scoreContainer">
+    <div class="gameTitle">
+      <img
+        src="https://img.pngio.com/viper-logo-image-with-red-snake-head-48184-free-icons-and-png-snake-head-png-961_1029.jpg"
+        alt="">
+      <h3>Master</h3>
+    </div>
+    <div class="gameScore">
+      <span>Your Score : </span>
+      <span class="score">0 </span>
+    </div>
+  </div>
   <canvas id="canvas"></canvas>
-
+  <div class="modal"> </div>
 </body>
 <script src="./test.js"></script>
 
