added code for sign in and sign up

--- a/snakefrontend/index.html
+++ b/snakefrontend/index.html
@@ -34,27 +34,22 @@
     </div>
   </div>
   <div class="modal">
-    <div class="modalInfo">
-      <div class="modalInfo__top">
-        <h3>Well Played !</h3>
+    <section class="form">
+      <div class="form__top">
+        <h2>Sign Up to Join Great Players</h2>
+        <i class="fa fa-times"></i>
       </div>
-      <div class="modalInfo__center">
-        <div class="yourscore finalscore">
-          <span>Your Score : </span>
-          <span class="scoretext">0 </span>
-        </div>
-        <div class="highestscore finalscore">
-          <span>Highest : </span>
-          <span class="highestscoretext"> 0</span>
-        </div>
+      <div class="form__bottom">
+        <form>
+          <div><input type="text" name="" placeholder="name"></div>
+          <div><input type="text" name="" placeholder="username"></div>
+          <div><input type="text" name="" placeholder="password"></div>
+          <button type="submit">SIGN IN</button>
+        </form>
+        <p>Already a User ? Login <span class="spanlink">here</span></p>
       </div>
-      <div class="modalInfo__bottom">
-        <h4>Wanna Play Again ?</h4>
-        <div class="modal__buttons">
-          <button>Yes ! Why Not ?</button>
-        </div>
-      </div>
-    </div>
+    </section>
+  </div>
   </div>
 </body>
 <script src="./test.js"></script>
