Update .gitignore and app.js, and fix UI image in index.html

--- a/snakefrontend/index.html
+++ b/snakefrontend/index.html
@@ -14,8 +14,7 @@
 <body>
   <div class="scoreContainer">
     <div class="gameTitle">
-      <img
-        src="https://img.pngio.com/viper-logo-image-with-red-snake-head-48184-free-icons-and-png-snake-head-png-961_1029.jpg"
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQJRYtRYlFwbjT9cOP5k-SmXRTvsHFpFFE-NeNTcLxQ9g&s"
         alt="">
       <h3>Master</h3>
     </div>
